# aoyama-bot

./: .env.template  Cargo.toml  Containerfile  Dockerfile  docker-compose.yml
src/: main.rs
src/api/: mod.rs
src/api/anilist/: mod.rs  model.rs  queries.rs  util.rs
src/api/donmai/: mod.rs
src/commands/: anilist.rs  mod.rs  thread.rs
src/commands/admin/: commands.rs  mod.rs  register_commands.rs
src/commands/anilist/: anime.rs  embeds.rs  manga.rs  mod.rs
src/commands/anime/: anime.rs  image.rs  manga.rs  mod.rs
src/commands/core/: help.rs
src/commands/donmai/: image.rs
src/commands/threads/: mod.rs
src/commands/utilities/: mod.rs  summon.rs
src/core/: context.rs  error.rs  error_handler.rs  interactions.rs  menu.rs  menu_select.rs  mod.rs  responses.rs
src/core/embeds/: mod.rs
src/core/menus/: button_menu.rs  mod.rs  select_menu.rs
