[package]
name = "aoyama-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
dotenv = "0.15.0"
poise = "0.2.2"
reqwest = "0.11.11"
serde = { version = "1.0.137", default-features = false, features = ["derive", "std"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
